--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server/app.js",
+    "devbabel": "nodemon server/app.js --exec babel-node",
+    "webpack": "webpack --mode development --watch",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -17,9 +21,29 @@
   },
   "homepage": "https://github.com/rauulmorenooo/CryptoMarket#readme",
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
+    "bootstrap-icons": "^1.4.1",
+    "connect-history-api-fallback": "^1.6.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.1",
-    "pug": "^3.0.2"
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2",
+    "serve-favicon": "^2.5.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.14",
+    "@babel/node": "^7.13.13",
+    "@babel/preset-env": "^7.13.12",
+    "babel-loader": "^8.2.2",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.6.0"
   }
 }
