--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/rauulmorenooo/CryptoMarket#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt-nodejs": "^0.0.3",
     "bootstrap-icons": "^1.4.1",
     "connect-history-api-fallback": "^1.6.0",
