--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "bootstrap-icons": "^1.4.1",
     "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
+    "d3": "^6.7.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.1",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.0",
     "pug": "^3.0.2",
     "serve-favicon": "^2.5.0"
   },
