--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/rauulmorenooo/CryptoMarket#readme",
   "dependencies": {
+    "apexcharts": "^3.26.3",
     "axios": "^0.21.1",
     "bcrypt-nodejs": "^0.0.3",
     "bootstrap-icons": "^1.4.1",
@@ -28,12 +29,14 @@
     "cors": "^2.8.5",
     "d3": "^6.7.0",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.1",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.0",
     "pug": "^3.0.2",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "vue-apexcharts": "^1.6.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
